--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -615,8 +615,8 @@ slurm:
         # Approximate Weak-Scaling
         'f32-srp-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [3000000],
-            'bunches': [192],
+            'particles': [1500000],
+            'bunches': [12, 24, 48],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -631,7 +631,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [64],
+            'workers': [2, 4, 8],
             'omp': [10],            
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -642,8 +642,8 @@ slurm:
 
         'f32-rds-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [3000000],
-            'bunches': [192],
+            'particles': [1500000],
+            'bunches': [12, 24, 48],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -658,7 +658,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [64],
+            'workers': [2, 4, 8],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -669,8 +669,8 @@ slurm:
 
         'srp-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [3000000],
-            'bunches': [192],
+            'particles': [1500000],
+            'bunches': [12, 24, 48],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -685,7 +685,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [64],
+            'workers': [2, 4, 8],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -696,8 +696,8 @@ slurm:
 
         'rds-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [3000000],
-            'bunches': [192],
+            'particles': [1500000],
+            'bunches': [12, 24, 48],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -712,7 +712,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [64],
+            'workers': [2, 4, 8],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -723,8 +723,8 @@ slurm:
 
         'exact-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [3000000],
-            'bunches': [192],
+            'particles': [1500000],
+            'bunches': [12, 24, 48],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -739,7 +739,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [64],
+            'workers': [2, 4, 8],
             'omp': [10],
             'mpi': ['mvapich2'],
             'time': [120],
@@ -750,8 +750,8 @@ slurm:
 
         'float32-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [3000000],
-            'bunches': [192],
+            'particles': [1500000],
+            'bunches': [12, 24, 48],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -766,7 +766,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [64],
+            'workers': [2, 4, 8],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
