--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -3,18 +3,18 @@ cloud:
     run_configs: 
 
         - 'srp-timing-cpu' # Done 
-        - 'rds-timing-cpu' # In progress
-        - 'exact-timing-cpu' # In progress
-        - 'float32-timing-cpu'
+        # - 'rds-timing-cpu' # In progress
+        # - 'exact-timing-cpu' # In progress
+        # - 'float32-timing-cpu'
         - 'f32-srp-timing-cpu' 
-        - 'f32-rds-timing-cpu' 
+        # - 'f32-rds-timing-cpu' 
 
     configs: {
 
         'f32-srp-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [1875000],
-            'bunches': [192],
+            'particles': [1500000],
+            'bunches': [12, 24, 48, 96, 192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -29,13 +29,13 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [40],
+            'workers': [2, 4, 8, 16, 32],
             'omp': [32],            
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
             'time': [60],
-            'repeats': 2
+            'repeats': 3
         },
 
         'f32-rds-timing-cpu': {
@@ -67,7 +67,7 @@ cloud:
 
         'srp-timing-cpu': {
             'exe': ['LHC_main.py'],
-            'particles': [1875000],
+            'particles': [12, 24, 48, 96, 192],
             'bunches': [192],
             'slices': [1000],
             'turns': [10000],
@@ -83,13 +83,13 @@ cloud:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [40],
+            'workers': [2, 4, 8, 16, 32],
             'omp': [32],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [64],
             'partition': ['cloud'],
             'time': [60],
-            'repeats': 2
+            'repeats': 3
         },
 
         'rds-timing-cpu': {
