updates scan scripts

--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -588,12 +588,12 @@ slurm:
         # - 'lb-approx0-weak-scaling-cpu-gpu'
         
         # Approximate 
-        # - 'srp-timing-cpu' DONE
-        # - 'rds-timing-gpu' DONE
-        # - 'exact-timing-gpu' DONE
-        # - 'float32-timing-gpu' DONE
-        # - 'f32-srp-timing-gpu' DONE
-        # - 'f32-rds-timing-gpu' DONE
+        # - 'exact-timing-gpu'
+        - 'f32-srp-timing-strong-gpu'
+        - 'f32-rds-timing-strong-gpu'
+        # - 'srp-timing-cpu'
+        # - 'rds-timing-gpu'
+        # - 'float32-timing-gpu'
 
         # Approximate Weak Scaling
         # - 'srp-weak-scaling-timing-gpu' 
@@ -603,14 +603,177 @@ slurm:
         # - 'f32-srp-weak-scaling-timing-gpu'
         # - 'f32-rds-weak-scaling-timing-gpu' 
 
-        - 'srp-timing-cpu' # Done 
-        - 'rds-timing-cpu' # In progress
-        - 'exact-timing-cpu' # In progress
-        - 'float32-timing-cpu'
-        - 'f32-srp-timing-cpu' 
-        - 'f32-rds-timing-cpu' 
+        # - 'srp-timing-cpu' # Done 
+        # - 'rds-timing-cpu' # In progress
+        # - 'exact-timing-cpu' # In progress
+        # - 'float32-timing-cpu'
+        # - 'f32-srp-timing-cpu' 
+        # - 'f32-rds-timing-cpu' 
 
     configs: {
+
+        # Approximate Weak-Scaling
+        'exact-timing-gpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [3000000],
+            'bunches': [24, 48, 96, 192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [2, 4, 8, 16],
+            'omp': [20],
+            'mpi': ['openmpi4'],
+            'cores_per_cpu': [20],
+            'partition': ['gpu'],
+            'time': [30],
+            'repeats': 2
+        },
+
+
+        'f32-srp-timing-strong-gpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [3000000],
+            'bunches': [192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [2, 4, 8],
+            'omp': [20],            
+            'mpi': ['openmpi4'],
+            'cores_per_cpu': [20],
+            'partition': ['gpu'],
+            'time': [120],
+            'repeats': 2
+        },
+
+        'f32-rds-timing-strong-gpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [3000000],
+            'bunches': [192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [2, 4, 8],
+            'omp': [20],
+            'mpi': ['openmpi4'],
+            'cores_per_cpu': [20],
+            'partition': ['gpu'],
+            'time': [120],
+            'repeats': 2
+        },
+
+        'srp-timing-gpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [1000000],
+            'bunches': [12, 24, 48, 96, 192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [1],
+            'omp': [8],
+            'mpi': ['openmpi4'],
+            'time': [60],
+            'repeats': 3
+        },
+
+        'rds-timing-gpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [1000000],
+            'bunches': [12, 24, 48, 96, 192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [1],
+            'omp': [8],
+            'mpi': ['openmpi4'],
+
+            'time': [60],
+            'repeats': 3
+        },
+
+
+
+        'float32-timing-gpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [1000000],
+            'bunches': [12, 24, 48, 96, 192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [1],
+            'omp': [8],
+            'mpi': ['openmpi4'],
+
+            'time': [60],
+            'repeats': 3
+        },
+
 
         # Approximate Weak-Scaling
         'f32-srp-timing-cpu': {
@@ -631,7 +794,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2],
+            'workers': [1, 2, 4, 8, 16],
             'omp': [10],            
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -658,7 +821,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [2],
+            'workers': [1, 2, 4, 8, 16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'cores_per_cpu': [20],
@@ -775,6 +938,7 @@ slurm:
             'repeats': 4
         },
 
+
         'approx0-interm': {
             'exe': ['LHC_main.py'],
             'particles': [1000000], #, 2000000],
@@ -881,161 +1045,6 @@ slurm:
             'repeats': 3
         },
 
-
-
-        # Approximate Weak-Scaling
-        'f32-srp-timing-gpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [12],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [2, 3],
-            'approx': [1],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [1],
-            'workers': [1],
-            'omp': [8],            
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 3
-        },
-
-        'f32-rds-timing-gpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [12],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [2],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [1],
-            'workers': [1],
-            'omp': [8],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 3
-        },
-
-        'srp-timing-gpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [12],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [2, 3],
-            'approx': [1],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [1],
-            'workers': [1],
-            'omp': [8],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 3
-        },
-
-        'rds-timing-gpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [12],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [2],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [1],
-            'workers': [1],
-            'omp': [8],
-            'mpi': ['openmpi4'],
-
-            'time': [60],
-            'repeats': 3
-        },
-
-        'exact-timing-gpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [12],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [0],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [1],
-            'workers': [1],
-            'omp': [8],
-            'mpi': ['openmpi4'],
-
-            'time': [60],
-            'repeats': 3
-        },
-
-        'float32-timing-gpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [12],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [0],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [1],
-            'workers': [1],
-            'omp': [8],
-            'mpi': ['openmpi4'],
-
-            'time': [60],
-            'repeats': 3
-        },
 
         # Approximate Weak-Scaling
         'f32-srp-weak-scaling-timing-gpu': {
