--- a/scripts/scan/ps_configs.yml
+++ b/scripts/scan/ps_configs.yml
@@ -618,6 +618,9 @@ slurm:
         # - 'lb-approx0-weak-scaling-cpu-gpu'
         
         # Approximate 
+        # - 'exact-timing-gpu'
+        - 'f32-srp-timing-strong-gpu'
+        - 'f32-rds-timing-strong-gpu'
         # - 'srp-timing-gpu' # DONE
         # - 'rds-timing-gpu' # DONE 
         # - 'exact-timing-gpu' # DONE 
@@ -630,10 +633,99 @@ slurm:
         # - 'rds-timing-cpu'  #DONE
         # - 'exact-timing-cpu' # DONE
         # - 'float32-timing-cpu'  #DONE
-        - 'f32-srp-timing-cpu' 
+        # - 'f32-srp-timing-cpu' 
         # - 'f32-rds-timing-cpu' 
 
     configs: {
+
+        # Approximate
+        'exact-timing-gpu': {
+            'exe': ['PS_main.py'],
+            'particles': [4000000, 8000000, 16000000, 32000000],
+            'bunches': [21],  # 192
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            #'workers': [1, 2, 4],
+            'workers': [2, 4, 8, 16],
+            'omp': [20],
+            'mpi': ['openmpi4'],
+            'cores_per_cpu': [20],
+            'partition': ['gpu'],
+            'time': [30],
+            'repeats': 2
+        },
+
+
+
+        'f32-srp-timing-strong-gpu': {
+            'exe': ['PS_main.py'],
+            'particles': [16000000],
+            'bunches': [21],  # 192
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [2, 4, 8],
+            'omp': [20],
+            'mpi': ['openmpi4'],
+            'cores_per_cpu': [20],
+            'partition': ['gpu'],
+            'time': [120],
+            'repeats': 2
+        },
+
+
+        'f32-rds-timing-strong-gpu': {
+            'exe': ['PS_main.py'],
+            'particles': [16000000],
+            'bunches': [21],  # 192
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [2, 4, 8],
+            'omp': [20],
+            'mpi': ['openmpi4'],
+            'cores_per_cpu': [20],
+            'partition': ['gpu'],
+            'time': [120],
+            'repeats': 2
+        },
+
+
+
 
         # Approximate
         'f32-srp-timing-cpu': {
@@ -906,64 +998,6 @@ slurm:
 
 
 
-
-        # Approximate
-        'f32-srp-timing-gpu': {
-            'exe': ['PS_main.py'],
-            'particles': [16000000],
-            'bunches': [21],  # 192
-
-            'slices': [256],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [50],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [3],
-            'approx': [1],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [1],
-            'workers': [1],
-            'omp': [8],
-            'mpi': ['openmpi4'],
-            'time': [60],
-
-            'repeats': 3
-        },
-
-
-        'f32-rds-timing-gpu': {
-            'exe': ['PS_main.py'],
-            'particles': [16000000],
-            'bunches': [21],  # 192
-
-            'slices': [256],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [50],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [2],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [1],
-            'workers': [1],
-            'omp': [8],
-            'mpi': ['openmpi4'],
-            'time': [60],
-
-            'repeats': 3
-        },
-
-
         'srp-timing-gpu': {
             'exe': ['PS_main.py'],
             'particles': [16000000],
@@ -1019,33 +1053,6 @@ slurm:
             'repeats': 3
         },
 
-        'exact-timing-gpu': {
-            'exe': ['PS_main.py'],
-            'particles': [16000000],
-            'bunches': [21],  # 192
-
-            'slices': [256],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [50],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [0],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [1],
-            #'workers': [1, 2, 4],
-            'workers': [1],
-            'omp': [8],
-            'mpi': ['openmpi4'],
-            'time': [60],
-
-            'repeats': 3
-        },
 
 
         'float32-timing-gpu': {
